XMLtoCSV/objects/unpackaged/objects/PCYC_Account_Sales_Info__c.object
<CustomObject>
    <description>Competitor Sales Information</description>
    <fields>
        <fullName>PCYC_Account__c</fullName>
        <description>Business Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Sales</relationshipLabel>
        <relationshipName>Competitor_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCYC_Dollar_Sales__c</fullName>
        <description>Dollar Sales</description>
        <label>Dollar Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id, PCYC ID, Product Name, Last 12 or 3 month value.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Sales_Period__c</fullName>
        <description>Date Range ie Last 3 months, Last 12 months</description>
        <label>Sales Period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Unit_Sold__c</fullName>
        <description>Unit Sold</description>
        <label>Unit Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitor Sales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Unit_Sold__c</columns>
        <columns>PCYC_Sales_Period__c</columns>
        <columns>PCYC_Dollar_Sales__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Competitor Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>